@@ -237,6 +237,8 @@ Chronological list of authors
   - Aditya Keshari
   - Philipp Stärk
   - Sampurna Mukherjee
+  - Leon Wehrhan
+
 
 External code
 -------------
