@@ -770,3 +770,14 @@ doi = {10.1107/S0108767305015266}
   pages = {6161--6171},
   doi = {10.1021/acs.jctc.2c00327}
 }
+
+@article{Linke2018,
+  title = {Fully Anisotropic Rotational Diffusion Tensor from Molecular Dynamics Simulations},
+  author = {Linke, Max and Köfinger, Jürgen and Hummer, Gerhard},
+  year = {2018},
+  journal = {The Journal of Physical Chemistry B},
+  volume = {122},
+  number = {21},
+  pages = {5630--5639},
+  doi = {10.1021/acs.jpcb.7b11988}
+}
